// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navbar snapshots matches snapshot in connected state 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="flex items-center justify-between px-4 md:px-6 py-4 border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-gray-950"
    >
      <div
        class="flex items-center gap-2 font-bold text-lg"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rocket text-indigo-500 dark:text-indigo-400"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
          />
          <path
            d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09"
          />
          <path
            d="M9 12a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.4 22.4 0 0 1-4 2z"
          />
          <path
            d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 .05 5 .05"
          />
        </svg>
        <span
          class="hidden sm:inline"
        >
          Fund-My-Cause
        </span>
      </div>
      <div
        class="hidden md:flex items-center gap-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            class="text-sm text-gray-600 dark:text-gray-300"
          >
            GABCD...WXYZ · 42.50 XLM
          </span>
          <button
            class="flex items-center gap-1 text-sm text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-out"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 17 5-5-5-5"
              />
              <path
                d="M21 12H9"
              />
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
            </svg>
             Disconnect
          </button>
        </div>
        <button
          aria-label="Toggle theme"
          class="p-2 rounded-xl bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun text-yellow-500"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex md:hidden items-center gap-2"
      >
        <button
          aria-label="Toggle theme"
          class="p-2 rounded-xl bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun text-yellow-500"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle menu"
          class="p-2 rounded-xl bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Navbar snapshots matches snapshot in disconnected state 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="flex items-center justify-between px-4 md:px-6 py-4 border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-gray-950"
    >
      <div
        class="flex items-center gap-2 font-bold text-lg"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rocket text-indigo-500 dark:text-indigo-400"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
          />
          <path
            d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09"
          />
          <path
            d="M9 12a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.4 22.4 0 0 1-4 2z"
          />
          <path
            d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 .05 5 .05"
          />
        </svg>
        <span
          class="hidden sm:inline"
        >
          Fund-My-Cause
        </span>
      </div>
      <div
        class="hidden md:flex items-center gap-3"
      >
        <button
          class="flex items-center gap-2 bg-indigo-600 hover:bg-indigo-500 px-4 py-2 rounded-xl text-sm font-medium text-white transition disabled:opacity-50"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wallet"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
          Connect Wallet
        </button>
        <button
          aria-label="Toggle theme"
          class="p-2 rounded-xl bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun text-yellow-500"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex md:hidden items-center gap-2"
      >
        <button
          aria-label="Toggle theme"
          class="p-2 rounded-xl bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sun text-yellow-500"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M12 20v2"
            />
            <path
              d="m4.93 4.93 1.41 1.41"
            />
            <path
              d="m17.66 17.66 1.41 1.41"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="m6.34 17.66-1.41 1.41"
            />
            <path
              d="m19.07 4.93-1.41 1.41"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle menu"
          class="p-2 rounded-xl bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
